# ACP

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/descartes/: CMakeLists.txt  descartes.cc
apps/encasement2d/: CMakeLists.txt  encasement_plot.cc  encasement_test.cc
apps/encasement3d/: CMakeLists.txt  CMakeLists.txt.1  encasement3d_generate.cc  encasement3d_getRoots_test.cc  encasement3d_test.cc  splitting_plane_test.cc
apps/poly/: CMakeLists.txt  poly2d_main.cc  poly3d_main.cc
apps/sonar/: CMakeLists.txt  reflect.cc
apps/sweep/: CMakeLists.txt  sweep.cc
apps/visualization/: CMakeLists.txt  display_mesh_folder_vtk.cc  meshviz3d.cc  surface_visualization_vtk.cc  viz3d.cc
cmake/modules/: FindGMP.cmake
docs/: Doxyfile
extras/: CPU_CONTROLS.txt  badtopology.txt  boundingBox.txt  joe1.txt  joe2.txt  joe3.txt  joe4.txt  joe5.txt  joe6.txt  paraboloid.txt  poses2.txt  split1.txt  split2.txt  split3.txt
include/acp/circle/: circle.h
include/acp/core/: acp.h  object.h  timer.h
include/acp/dcel/: dcel.h
include/acp/delaunay/: delaunay.h
include/acp/encasement2d/: critical_points.h  encasement2d.h  plot.h  pngwriter.h  predicates2d.h
include/acp/encasement3d/: disjointset.h  encasement3d.h  encasement_utils.h  mesh3d.h
include/acp/linmath/: linmath.h  mat.h  pv.h  pv_d.h
include/acp/poly/: poly.h  poly2.h  poly2d.h  poly3.h  poly3d.h  ppoly.h  ppoly_d.h  root.h  root2.h
include/acp/resultant/: resultant.h  resultant_arrangement.h
include/acp/visualization/: Playback.h  intersect.h  stb_image.h  surfaceintersect.h
pdd/: acp-standard.h  acp-test6.h  acp.cc  acp.h  angle.cc  angle.h  c4d.cc  c4d.h  cdt.C  cdt.h  contact.cc  contact.h  cspace  cspace.C  cspace.h  csres.C  delaunay.C  delaunay.h  eqsub-classes3.txt  freespace-graph.cc  freespace-graph.h  freespace-graph_test.cc  freespace.cc  freespace.h  geometry3d.h  heap.h  hull.C  hull.h  io.C  io.h  makefile  mesh.C  mesh.h  min-class3.txt  mink.C  mink.h  mod.cc  mod.h  mpar.cc  mpar.h  (+32 more)
pdd/ex/: bull.vtk  cube.vtk  ear.vtk  frustum.vtk  glacier.vtk  horse.vtk  lattice-room.vtk  o1.vtk  o2.vtk  o3.vtk  o4.vtk  plus.vtk  r1.vtk  r2.vtk  sphere.vtk  tworooms.vtk
pdd/frustum-tworooms-graph/: graph.txt
pdd/skinny-lattice-graph/: graph.txt
src/: CMakeLists.txt
src/circle/: CMakeLists.txt  circle.cc
src/core/: CMakeLists.txt  acp.cc  object.cc
src/dcel/: CMakeLists.txt  dcel.cc
src/delaunay/: CMakeLists.txt  delaunay.cc
src/encasement2d/: CMakeLists.txt  critical_points.cc  encasement2d.cc  encasement_test.cc  plot.cc  pngwriter.cc  predicates2d.cc
src/encasement3d/: CMakeLists.txt  encasement3d.cc  encasement_utils.cc
src/gpu/: cuda_interval.h  cuda_interval_lib.h  cuda_interval_rounded_arith.h  cuda_poly.h  encasement_gpu.cu  encasement_gpu.h  encasement_gpu_test.cu  interval.h
src/poly/: CMakeLists.txt  poly.cc  poly2d.cc  poly3d.cc  ppoly.cc  ppoly_d.cc  root.cc  root2.cc
src/resultant/: CMakeLists.txt  resultant.cc  resultant_arrangement.cc
src/visualization/: CMakeLists.txt  Playback.cc  stb_image.cc
tests/: CMakeLists.txt
